--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
 <meta name="robots" content="noindex, nofollow">
 <title>Øystein Sørensen</title>
 
-<meta name="description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience.">
+<meta name="description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
+I am interested in latent variable models for analysis of longitudinal data in psychology,
+particularly on developing efficient computational algorithms and software.
+I also work on interpretable machine learning methods, and through various collaborations
+I am involved in a range of applied projects in psychology and neuroscience.
+">
 <meta name="author" content="Øystein Sørensen">
 <link rel="canonical" href="http://localhost:1313/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e690afcd5c523330d5c8b4d746eb158361600a015e99518d4d246a6ccab0cc19.css" integrity="sha256-5pCvzVxSMzDVyLTXRusVg2FgCgFemVGNTSRqbMqwzBk=" rel="preload stylesheet" as="style">
@@ -29,13 +34,23 @@
 
     </style>
 </noscript><meta property="og:title" content="Øystein Sørensen" />
-<meta property="og:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience." />
+<meta property="og:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
+I am interested in latent variable models for analysis of longitudinal data in psychology,
+particularly on developing efficient computational algorithms and software.
+I also work on interpretable machine learning methods, and through various collaborations
+I am involved in a range of applied projects in psychology and neuroscience.
+" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://localhost:1313/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Øystein Sørensen"/>
-<meta name="twitter:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience."/>
+<meta name="twitter:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
+I am interested in latent variable models for analysis of longitudinal data in psychology,
+particularly on developing efficient computational algorithms and software.
+I also work on interpretable machine learning methods, and through various collaborations
+I am involved in a range of applied projects in psychology and neuroscience.
+"/>
 
 <script type="application/ld+json">
 {
@@ -43,7 +58,7 @@
   "@type": "Organization",
   "name": "Øystein Sørensen",
   "url": "http://localhost:1313/",
-  "description": "I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in …",
+  "description": "I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.\nI am interested in latent variable models for analysis of longitudinal data in …",
   "thumbnailUrl": "http://localhost:1313/favicon.ico",
   "sameAs": [
       "mailto:oystein.sorensen@psykologi.uio.no", "https://scholar.google.com/citations?hl=no\u0026user=neOqbw0AAAAJ\u0026view_op=list_works\u0026sortby=pubdate", "https://github.com/osorensen", "www.linkedin.com/in/øystein-sørensen-4b487626b", "https://bsky.app/profile/osorensen.bsky.social"
