added some info

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@ I am involved in a range of applied projects in psychology and neuroscience.
         }
 
     </style>
-</noscript><meta property="og:title" content="Øystein Sørensen" />
+</noscript><meta property="og:title" content="" />
 <meta property="og:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
 I am interested in latent variable models for analysis of longitudinal data in psychology,
 particularly on developing efficient computational algorithms and software.
@@ -44,7 +44,7 @@ I am involved in a range of applied projects in psychology and neuroscience.
 <meta property="og:url" content="http://localhost:1313/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Øystein Sørensen"/>
+<meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway.
 I am interested in latent variable models for analysis of longitudinal data in psychology,
 particularly on developing efficient computational algorithms and software.
@@ -102,7 +102,10 @@ I am involved in a range of applied projects in psychology and neuroscience.
         <img draggable="false" src="http://localhost:1313/picture.jpeg" alt="profile image" title=""
             height="160" width="120" />
         <h1>Øystein Sørensen</h1>
-        <span>I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience.</span><div class="social-icons" >
+        <span><p>I am a Professor of Statistics in the Department of Psychology at the University of Oslo, Norway. I am interested in latent variable models for analysis of longitudinal data in psychology, particularly on developing efficient computational algorithms and software. I also work on interpretable machine learning methods, and through various collaborations I am involved in a range of applied projects in psychology and neuroscience.</p>
+<p>I also have a 20% position as a Senior Researcher at <a href="https://www.rbup.no/" target="_blank">RBUP Øst og Sør</a>.</p>
+
+</span><div class="social-icons" >
     <a href="mailto:oystein.sorensen@psykologi.uio.no" target="_blank" rel="noopener noreferrer me"
         title="Email">
         
